@@ -16,6 +16,7 @@ Stable versions
 	- add built-in gzip file decompressor
 	- add built-in compress file decompressor
 	- add library regression tests
+	- add support to IT envelope carry
 	- fix interpolation and sample loop processing
 	- fix S404 depacker integration
 	- fix note delay effect
